Search result page is no longer wrapped by .mw

--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -6,10 +6,10 @@
   url-prefix("https://www.google.co.jp/search")
 {
   /* ADs */
-  .mw #tads, .mw #bottomads {
+  #tads, #bottomads {
     background: #ffd !important;
   }
-  .mw #tads * {
+  #tads * {
     background-color: inherit !important;
   }
 
@@ -20,24 +20,24 @@
   }
 
   /* Missing words and/or Recently visited page */
-  .mw .TXwUJf   { font: bold larger/2 sans-serif !important; }
-  .mw .TXwUJf s { text-decoration: none !important; }
+  .TXwUJf   { font: bold larger/2 sans-serif !important; }
+  .TXwUJf s { text-decoration: none !important; }
 
-  .mw .TXwUJf s::before {
+  .TXwUJf s::before {
     content: "\2718";
     color: #c00;
   }
 
   /* Hacked / Compromised */
-  .mw .slp a.fl[href^="/url"]:only-child,
-  .mw .slp a.fl[href^="/support"]:only-child,
-  .mw .slp a.fl[href^="https://support.google.com/"]:only-child {
+  .slp a.fl[href^="/url"]:only-child,
+  .slp a.fl[href^="/support"]:only-child,
+  .slp a.fl[href^="https://support.google.com/"]:only-child {
     color: #d00 !important;
     font-weight: bold !important;
   }
 
   /* Google promotion */
-  .mw #wmxmsg {
+  #wmxmsg {
     opacity: 0.3 !important;
   }
 }
